--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 </head>
 
 <body>
-  <!-- Ícones fixos -->
+  <!-- Ícone do carrinho fixo -->
   <button id="cart-icon" aria-label="Abrir carrinho">🛒 <span id="cart-count">0</span></button>
-  <button id="orders-icon" aria-label="Ver pedidos" title="Meus pedidos">📜</button>
 
   <!-- Cabeçalho -->
   <header class="header">
@@ -102,6 +101,7 @@
           <button class="extras-btn">➕ Adicionais</button>
         </div>
       </article>
+
 <article class="card" data-type="burger" data-id="CADIM" data-name="CADIM" data-price="17.00">
         <h3>CADIM <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 17,00</div>
@@ -171,7 +171,7 @@
       <article class="card" data-type="burger" data-id="PELEJA" data-name="PELEJA" data-price="26.00">
         <h3>PELEJA <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 26,00</div>
-        <p>Pão, alface, tomate, milho, bacon, hambúrguer artesanal 120g, filé de frango, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
+        <p>Pão, alface, tomate, milho, bacon, hambúrguer artesanal 120g, filé de frango, presunto e mussarela.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -181,7 +181,7 @@
       <article class="card" data-type="burger" data-id="TUDIBOM" data-name="TUDIBOM" data-price="28.50">
         <h3>TUDIBOM <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 28,50</div>
-        <p>Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
+        <p>Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, presunto e mussarela.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -191,7 +191,7 @@
       <article class="card" data-type="burger" data-id="CUSTOSO" data-name="CUSTOSO" data-price="31.00">
         <h3>CUSTOSO <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 31,00</div>
-        <p>Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, cheddar cremoso, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
+        <p>Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, cheddar cremoso, presunto e mussarela.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -208,55 +208,42 @@
         <h3>Combo Casal (Tradicional)</h3>
         <div class="price">R$ 34,99</div>
         <p>2 Hambúrguer Trem + 1 Fanta 1L.</p>
-        <div class="actions">
-          <button class="add-cart">Adicionar</button>
-          <button class="extras-btn">➕ Adicionais</button>
-        </div>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">➕ Adicionais</button></div>
       </article>
 
       <article class="card" data-type="combo" data-id="CF_TRAD" data-name="Combo Família (Tradicional)" data-price="59.99">
         <h3>Combo Família (Tradicional)</h3>
         <div class="price">R$ 59,99</div>
         <p>4 Hambúrguer Trem + 1 Kuat 2L.</p>
-        <div class="actions">
-          <button class="add-cart">Adicionar</button>
-          <button class="extras-btn">➕ Adicionais</button>
-        </div>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">➕ Adicionais</button></div>
       </article>
 
       <article class="card" data-type="combo" data-id="CC_ART" data-name="Combo Casal (Artesanal)" data-price="54.99">
         <h3>Combo Casal (Artesanal)</h3>
         <div class="price">R$ 54,99</div>
         <p>2 Hambúrguer Peleja + 1 Coca 1L.</p>
-        <div class="actions">
-          <button class="add-cart">Adicionar</button>
-          <button class="extras-btn">➕ Adicionais</button>
-        </div>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">➕ Adicionais</button></div>
       </article>
 
       <article class="card" data-type="combo" data-id="CF_ART" data-name="Combo Família (Artesanal)" data-price="79.99">
         <h3>Combo Família (Artesanal)</h3>
         <div class="price">R$ 79,99</div>
         <p>4 Hambúrguer Peleja + 1 Coca 2L.</p>
-        <div class="actions">
-          <button class="add-cart">Adicionar</button>
-          <button class="extras-btn">➕ Adicionais</button>
-        </div>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">➕ Adicionais</button></div>
       </article>
     </div>
   </section>
 
-  <!-- ======================== -->
+<!-- ======================== -->
   <!-- Hot Dog’s -->
   <!-- ======================== -->
   <section class="menu-section">
     <h2>🌭 Hot Dog’s</h2>
     <div class="grid">
-
       <article class="card" data-type="hotdog" data-id="NIGUCIM" data-name="NIGUCIM" data-price="10.00">
         <h3>NIGUCIM <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 10,00</div>
-        <p>Pão, molho, salsicha (Sadia/Perdigão), milho, batata palha, ketchup e maionese. <em>Acompanha sachê de ketchup.</em></p>
+        <p>Pão, molho, salsicha (Sadia/Perdigão), milho, batata palha, ketchup e maionese.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -266,7 +253,7 @@
       <article class="card" data-type="hotdog" data-id="SIMPRAO" data-name="SIMPRÃO" data-price="12.00">
         <h3>SIMPRÃO <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 12,00</div>
-        <p>Pão, molho, salsicha, milho, batata palha, bacon, ketchup e maionese. <em>Acompanha sachê de ketchup.</em></p>
+        <p>Pão, molho, salsicha, milho, batata palha, bacon, ketchup e maionese.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -276,17 +263,17 @@
       <article class="card" data-type="hotdog" data-id="NIMIM" data-name="NIMIM" data-price="13.00">
         <h3>NIMIM <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 13,00</div>
-        <p>Pão, molho, 2 salsichas, milho, batata palha, bacon, ketchup, maionese e vinagrete. <em>Acompanha sachê de ketchup.</em></p>
+        <p>Pão, molho, 2 salsichas, milho, batata palha, bacon, ketchup, maionese e vinagrete.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
         </div>
       </article>
 
-<article class="card" data-type="hotdog" data-id="PADANA" data-name="PADANÁ" data-price="15.00">
+      <article class="card" data-type="hotdog" data-id="PADANA" data-name="PADANÁ" data-price="15.00">
         <h3>PADANÁ <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 15,00</div>
-        <p>Pão, molho, 2 salsichas, milho, batata palha, bacon, vinagrete, mussarela, ketchup e maionese. <em>Acompanha sachê de ketchup.</em></p>
+        <p>Pão, molho, 2 salsichas, milho, batata palha, bacon, vinagrete, mussarela, ketchup e maionese.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -296,7 +283,7 @@
       <article class="card" data-type="hotdog" data-id="PURIZIM" data-name="PURIZIM" data-price="14.00">
         <h3>PURIZIM <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 14,00</div>
-        <p>Pão, molho, milho, purê de batata cremoso, 1 salsicha, batata palha, ketchup e maionese. <em>Acompanha sachê de ketchup.</em></p>
+        <p>Pão, molho, milho, purê de batata cremoso, 1 salsicha, batata palha, ketchup e maionese.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -306,7 +293,7 @@
       <article class="card" data-type="hotdog" data-id="TREMBAO" data-name="TREMBÃO" data-price="17.00">
         <h3>TREMBÃO <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 17,00</div>
-        <p>Pão, molho, milho, purê de batata, 2 salsichas, bacon, mussarela, batata palha, vinagrete, ketchup e maionese. <em>Acompanha sachê de ketchup.</em></p>
+        <p>Pão, molho, milho, purê de batata, 2 salsichas, bacon, mussarela, batata palha, vinagrete, ketchup e maionese.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -319,53 +306,28 @@
   <section class="menu-section">
     <h2>Bebidas & Refrigerantes</h2>
     <div class="grid">
-      <article class="card" data-type="beverage" data-id="coca200" data-name="Coca-Cola 200ml" data-price="4.00">
-        <h3>Coca-Cola 200ml</h3>
-        <div class="price">R$ 4,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-      <article class="card" data-type="beverage" data-id="aguaG" data-name="Água com Gás" data-price="4.00">
-        <h3>Água com Gás</h3>
-        <div class="price">R$ 4,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-      <article class="card" data-type="beverage" data-id="uva450" data-name="Del Valle Uva 450ml" data-price="5.00">
-        <h3>Del Valle Uva 450ml</h3>
-        <div class="price">R$ 5,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-      <article class="card" data-type="beverage" data-id="laranja450" data-name="Del Valle Laranja 450ml" data-price="5.00">
-        <h3>Del Valle Laranja 450ml</h3>
-        <div class="price">R$ 5,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-      <article class="card" data-type="beverage" data-id="coca310" data-name="Coca-Cola 310ml" data-price="5.00">
-        <h3>Coca-Cola 310ml</h3>
-        <div class="price">R$ 5,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-      <article class="card" data-type="beverage" data-id="fanta1l" data-name="Fanta Laranja 1L" data-price="8.00">
-        <h3>Fanta Laranja 1L</h3>
-        <div class="price">R$ 8,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-      <article class="card" data-type="beverage" data-id="coca1l" data-name="Coca-Cola 1L" data-price="9.00">
-        <h3>Coca-Cola 1L</h3>
-        <div class="price">R$ 9,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-      <article class="card" data-type="beverage" data-id="kuat2l" data-name="Kuat Guaraná 2L" data-price="10.00">
-        <h3>Kuat Guaraná 2L</h3>
-        <div class="price">R$ 10,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-      <article class="card" data-type="beverage" data-id="coca2l" data-name="Coca-Cola 2L" data-price="13.00">
-        <h3>Coca-Cola 2L</h3>
-        <div class="price">R$ 13,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
+      <article class="card" data-type="beverage" data-id="coca200" data-name="Coca-Cola 200ml" data-price="4.00"><h3>Coca-Cola 200ml</h3><div class="price">R$ 4,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-type="beverage" data-id="aguaG" data-name="Água com Gás" data-price="4.00"><h3>Água com Gás</h3><div class="price">R$ 4,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-type="beverage" data-id="uva450" data-name="Del Valle Uva 450ml" data-price="5.00"><h3>Del Valle Uva 450ml</h3><div class="price">R$ 5,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-type="beverage" data-id="laranja450" data-name="Del Valle Laranja 450ml" data-price="5.00"><h3>Del Valle Laranja 450ml</h3><div class="price">R$ 5,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-type="beverage" data-id="coca310" data-name="Coca-Cola 310ml" data-price="5.00"><h3>Coca-Cola 310ml</h3><div class="price">R$ 5,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-type="beverage" data-id="fanta1l" data-name="Fanta Laranja 1L" data-price="8.00"><h3>Fanta Laranja 1L</h3><div class="price">R$ 8,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-type="beverage" data-id="coca1l" data-name="Coca-Cola 1L" data-price="9.00"><h3>Coca-Cola 1L</h3><div class="price">R$ 9,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-type="beverage" data-id="kuat2l" data-name="Kuat Guaraná 2L" data-price="10.00"><h3>Kuat Guaraná 2L</h3><div class="price">R$ 10,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-type="beverage" data-id="coca2l" data-name="Coca-Cola 2L" data-price="13.00"><h3>Coca-Cola 2L</h3><div class="price">R$ 13,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
     </div>
   </section>
+
+  <!-- Painel de Meus Pedidos -->
+  <aside id="orders-panel" class="orders-panel" aria-hidden="true">
+    <header class="orders-head">
+      <h3>📜 Meus Pedidos</h3>
+      <button class="orders-close" aria-label="Fechar">✕</button>
+    </header>
+    <div id="orders-content" class="orders-content">
+      <p class="empty-orders">Nenhum pedido foi encontrado.</p>
+    </div>
+  </aside>
 
   <!-- Mapa -->
   <h2 class="mapa-titulo">🚗 Entregamos em toda Patos de Minas 💛</h2>
@@ -384,56 +346,18 @@
     <p class="copy">© 2025 Da Família Lanches — Você faz parte disso!</p>
   </footer>
 
-  <!-- Painel lateral de pedidos -->
-  <div id="orders-backdrop"></div>
-  <aside id="orders-panel" aria-hidden="true">
-    <header class="orders-head">
-      <h3>📜 Meus Pedidos</h3>
-      <button class="orders-close" aria-label="Fechar">✕</button>
-    </header>
-    <div id="orders-list" class="orders-list">
-      <p>Você ainda não possui pedidos recentes.</p>
-    </div>
-  </aside>
-
-  <!-- Carrinho -->
-  <div id="cart-backdrop"></div>
-  <aside id="mini-cart" aria-hidden="true">
-    <header class="mini-head">
-      <h3>Seu Pedido</h3>
-      <button class="mini-close" aria-label="Fechar">✕</button>
-    </header>
-    <div id="mini-list" class="mini-list"></div>
-    <footer class="mini-foot">
-      <button id="mini-clear" class="btn-secondary">Limpar carrinho</button>
-      <button id="mini-checkout" class="btn-primary">Fechar pedido</button>
-    </footer>
-  </aside>
-
-  <!-- Modal de Adicionais -->
-  <div id="extras-backdrop"></div>
-  <aside id="extras-modal" aria-hidden="true">
-    <header class="extras-head">
-      <h3 id="extras-title">Adicionais</h3>
-      <button class="extras-close" aria-label="Fechar">✕</button>
-    </header>
-    <div id="extras-list" class="extras-list"></div>
-    <footer class="extras-foot">
-      <button id="extras-cancel" class="btn-secondary">Cancelar</button>
-      <button id="extras-add" class="btn-primary">Adicionar ao carrinho</button>
-    </footer>
-  </aside>
-
   <!-- Mapa script -->
   <script>
   (function(){
     const el = document.getElementById('mapa-entregas');
     if(!el) return;
+
     const map = L.map('mapa-entregas', {
       center: [-18.5783, -46.5187],
       zoom: 13,
       scrollWheelZoom: true
     });
+
     L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png').addTo(map);
     L.circle([-18.5783, -46.5187], {
       radius: 6000,
