Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <p class="tagline">O sabor que une a família 🍔</p>
       </div>
     </div>
+
+    <!-- 🔹 Botão fixo de Meus Pedidos -->
+    <div class="header-actions">
+      <button id="btn-historico" class="btn-historico">📜 Meus Pedidos</button>
+    </div>
   </header>
 
   <!-- Banner dinâmico -->
@@ -102,7 +107,7 @@
         </div>
       </article>
 
-<article class="card" data-type="burger" data-id="CADIM" data-name="CADIM" data-price="17.00">
+      <article class="card" data-type="burger" data-id="CADIM" data-name="CADIM" data-price="17.00">
         <h3>CADIM <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 17,00</div>
         <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, filé de frango, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
@@ -112,7 +117,7 @@
         </div>
       </article>
 
-      <article class="card" data-type="burger" data-id="ARMARIA" data-name="ARMARIA" data-price="18.00">
+<article class="card" data-type="burger" data-id="ARMARIA" data-name="ARMARIA" data-price="18.00">
         <h3>ARMARIA <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 18,00</div>
         <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, filé de frango, batata palha, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
